compiler/testData/diagnostics/tests/unsignedTypes/wrongLongSuffixForULong.kt
// FIR_IDENTICAL
konst a1 = 1u<!WRONG_LONG_SUFFIX!>l<!>
konst a2 = 0x1u<!WRONG_LONG_SUFFIX!>l<!>
konst a3 = 0B1u<!WRONG_LONG_SUFFIX!>l<!>
konst a4 = 1U<!WRONG_LONG_SUFFIX!>l<!>
